[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = {version = "0.4.19", features = ["serde"] }

[dependencies.async-graphql]
version = "5.0.6"
features = ["chrono"]

[dependencies.sea-orm]
version = "0.11.0"
features = [
  "macros",
  "debug-print",
  "runtime-tokio-native-tls",
  "sqlx-sqlite",
  "with-chrono",
]
default-features = false