[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
utils = { path = "../utils" }
axum = {verstion="0.6.7", features = ["headers"]}
tokio = { version = "1.25.0", features = ["full"] }
dotenv = "0.15.0"
async-graphql-axum = "5.0.6"
chrono = {version = "0.4.19", features = ["serde"] }
jsonwebtoken = "8.0"
once_cell = "1.8"

