[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
axum = "0.6.7"
tokio = { version = "1.25.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
dotenv = "0.15.0"
async-graphql-axum = "5.0.6"
chrono = {version = "0.4.19", features = ["serde"] }
jsonwebtoken = "8.0.1"
once_cell = "1.8"
serde = { version = "1", features = ["derive"] }

